--- a/notebooks/data_transformation.ipynb
+++ b/notebooks/data_transformation.ipynb
@@ -221,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07c20e0caff6429ab5b708b7bcff844b",
+       "model_id": "5789d4125d3044f6bdc91f09390a3637",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,7 +504,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "461f515ad7a847c69bd31ce4c416ef08",
+       "model_id": "175e8fe9e26c4fff8d16b70b5fe275af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +518,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d20229829f8440db9d32710355d8fa56",
+       "model_id": "874ec59115834107a80068d2036725db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -630,7 +630,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab6b92626fb344cbb0c04a0a07c277ed",
+       "model_id": "cc8f389864194573ac2a3951a5491173",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c274ff1ee0cd43779ebb43e44aaea125",
+       "model_id": "ec98633bdf814118ac31c9a8074df198",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,7 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ca785c9dfc34bb8a762778e382e42a5",
+       "model_id": "4df6116086004563a0930bfe01f8096d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -672,7 +672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a06fcdadb344d1e917127f2ac95f8d0",
+       "model_id": "0263b518b96742498ed476121403a788",
        "version_major": 2,
        "version_minor": 0
       },
@@ -686,7 +686,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5895c640374d4e56aa57f5b3d6d89595",
+       "model_id": "63aaad811516469cb8b8a9be025a15bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -819,7 +819,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1122ee06c85d4f699f860c2af29a5032",
+       "model_id": "680de00cc94d47ac8f645aa85e52bb96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -833,7 +833,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3915204697744ef7aa8d0493a6d0e281",
+       "model_id": "b6fffef6ab3d418f80b00facbd0667b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -847,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3b4cd7ee3914e098551fc8c376c2772",
+       "model_id": "85899ca3c0f04f18b89808ce51c12a96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -861,7 +861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19840da90b7245968475d6b5d0a73afe",
+       "model_id": "12b77622df944d1f9e8f86c58704e5f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -875,7 +875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43deb754c0f040b6a172498cdf50a168",
+       "model_id": "ad0205df8feb4b8a9e5c2a97fa49b37f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,13 +1042,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03789970c1d944b69f8e5b44b5d742f2",
+       "model_id": "f63e224aa8c04dd7b91a30827945cf53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1086,13 +1086,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98d06c94f0c24556a1ba7cd1a061f41a",
+       "model_id": "1c39a59cce7c4c0a9f55a6d289ace16d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,13 +1198,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "104a464ff3bf44a5865029350be21267",
+       "model_id": "453a62cec9a94dd9bf8474e6dc967051",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1218,7 +1218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af955c90724645ed94d5d10b63e8947b",
+       "model_id": "8962b90bae65454990c3eac2afb5c1bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1232,7 +1232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82fbd62c49684203b8584d302c79869d",
+       "model_id": "c0de1f430f30402c9ad524f6d7dfa01b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1246,7 +1246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd30620945b3434ea1e34c18a73aaedb",
+       "model_id": "4793c8fb889f45b784dceb6bc277b29a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1260,7 +1260,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2bbdd17c89041ba8b90813906b901f6",
+       "model_id": "efbdd3b5d84f4f23b469f3b0a77d1045",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1312,13 +1312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92c63ab1ca524d2589b4b51a594b42db",
+       "model_id": "b6907a61cd3e4622acbf59a89a57b537",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,13 +1378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78de8b6bd4624715988ea0a68d8b8c61",
+       "model_id": "fa8487ec5b6a4eacacc7bfce2d2577fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,13 +1443,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cdd96f2c55d493dadfd25e66f187a3b",
+       "model_id": "d934a92ab46a40b7a97beda7ae1f1324",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1463,7 +1463,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8681c110e07a40eeafaa4eb31c7de5f3",
+       "model_id": "d5cd2c9cea284461bad4de85c73b2b89",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1477,7 +1477,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00908608ecda4426ac2be8e10a79c53c",
+       "model_id": "06c345f4cb3342d39848c7888fa3b5fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1491,7 +1491,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6509755fc72d4a3180085a6ba7bf7543",
+       "model_id": "7febf55362924602ae6f59415e66be75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1505,7 +1505,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22f614ac69044b8cb1a4ad899e579b03",
+       "model_id": "9b8a7fc530c8473d8be6aa890081656b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1569,13 +1569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2c0bf4aa0b44537963af9e8be48b619",
+       "model_id": "ec0e74e1c4c0452bbe1429edc8dcd309",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1589,7 +1589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f758961f9c64f159ec370020938c8f4",
+       "model_id": "7730dcd7d70f4f3d9473c811a38a3e88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1603,7 +1603,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1637071c6d894c34835be7ce9fc44238",
+       "model_id": "031d59e1da18434ebb32e19df4e0a605",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1617,7 +1617,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307ae64e26284e13b833f4a50ab13196",
+       "model_id": "de13322c3dc24373bdf3151e5a6d60ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1631,7 +1631,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4c91aac3c064f0b9293a2342af00f8b",
+       "model_id": "a8bcf8ed230c4ecd9fe5b443e6066104",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,13 +1713,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16508cee4cdf4674b8010b431c131ae7",
+       "model_id": "eab06461e4484f65b58ce66281976f8d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1733,7 +1733,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0578092d2851484bbff1c27c1ddc11d4",
+       "model_id": "4ef26ac824a34095a66908cc8499fcbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1776,6 +1776,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### License Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dyadic Variables"
    ]
   },
@@ -1788,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,13 +1872,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75877e63dd6645c0957d15cd9b8307a5",
+       "model_id": "cf15979c115741fc9c9056a1e86c8862",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1876,7 +1892,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a1da214c01c4b9baa102a47b50a5fdd",
+       "model_id": "f3c84a66198b4aa398834b525073257d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1890,7 +1906,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c751776225c24a97879b39cf756fa88f",
+       "model_id": "9afe994fdb954e4a96a2cb12f496accf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1904,7 +1920,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fe2ac05e8714e16814f9412992764f1",
+       "model_id": "c125ac47d13d496691c5a65ea9794210",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1918,7 +1934,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa4ee4444e0c4dfab7585a52a68ea18c",
+       "model_id": "2ef1246084304652b65a45c8c4461a00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1982,64 +1998,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Developer Collaboration"
+    "#### Developer Collaborations with Owner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b95db16bc2274451bfe3f8fc101d5882",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# TODO\n",
-    "def create_developer_collaboration():\n",
+    "def create_collaborations_with_owner():\n",
     "    for i, an in tqdm(enumerate(affiliation_networks), total=len(affiliation_networks)):\n",
     "        G = an.copy()\n",
-    "        \n",
-    "        if i == 0:\n",
-    "            start = OBSERVATION_START\n",
-    "        else:\n",
-    "            start = observations[i-1]\n",
-    "        end = observations[i]\n",
-    "        \n",
-    "        for edge in tqdm(list(G.edges()), leave=False):\n",
-    "            # Get developer\n",
     "\n",
+    "        for dev in nodelist_devs[2:3]:\n",
+    "            associations = G.out_edges(dev)\n",
+    "            if associations:\n",
+    "                # Get all package names developer is associated with\n",
+    "                names = [ass[1][4:] for ass in associations]\n",
+    "                \n",
+    "                # Get packages and related owner from sample\n",
+    "                pkgs = sample_pkgs[sample_pkgs['name'].isin(names)][['name', 'repo_owner']].copy()\n",
+    "                pkgs['dev'] = dev[4:]\n",
+    "                pkgs['count'] = pkgs.groupby('repo_owner')['repo_owner'].transform('count')\n",
     "\n",
-    "            # Get dependencies for package\n",
-    "            upstream = [dep[1] for dep in dependency_networks[i].out_edges(edge[1])]\n",
-    "            downstream = [dep[0] for dep in dependency_networks[i].in_edges(edge[1])]\n",
+    "                for ass in associations:\n",
+    "                    dev_name = ass[0][4:]\n",
+    "                    pkg_name = ass[1][4:]\n",
     "\n",
-    "            # Check if developer is associated with any of the dependencies\n",
-    "            if upstream:\n",
-    "                for udep in upstream:\n",
-    "                    if has_association(edge[0][4:], udep[4:], start, end):\n",
-    "                        G.edges[edge]['upstream'] = 1\n",
+    "                    count = pkgs[(pkgs['dev'] == dev_name) & (pkgs['name'] == pkg_name)]['count'].values[0]\n",
+    "                    if count > 1:\n",
+    "                        G.edges[ass]['collaboration'] = 1\n",
     "                    else:\n",
-    "                        G.edges[edge]['upstream'] = 0\n",
-    "            else:\n",
-    "                G.edges[edge]['upstream'] = 0\n",
-    "            \n",
-    "            if downstream:\n",
-    "                for ddep in downstream:\n",
-    "                    if has_association(edge[0][4:], ddep[4:], start, end):\n",
-    "                        G.edges[edge]['downstream'] = 1\n",
-    "                    else:\n",
-    "                        G.edges[edge]['downstream'] = 0\n",
-    "            else:\n",
-    "                G.edges[edge]['downstream'] = 0\n",
+    "                        G.edges[ass]['collaboration'] = 0\n",
+    "    \n",
+    "        adj = nx.bipartite.biadjacency_matrix(G, row_order=nodelist_devs, column_order=nodelist_pkgs, weight=\"collaboration\")\n",
+    "        am = adj.toarray()\n",
+    "        np.savetxt('../data/dyadic/collaborations-{0}.txt'.format(observations[i]), am, fmt='%s')\n",
     "\n",
-    "        \n",
-    "        adj_up = nx.bipartite.biadjacency_matrix(G, row_order=nodelist_devs, column_order=nodelist_pkgs, weight=\"upstream\")\n",
-    "        am_up = adj_up.toarray()\n",
-    "        np.savetxt('../data/dyadic/dep_up_associations-{0}.txt'.format(observations[i]), am_up, fmt='%s')\n",
-    "\n",
-    "        adj_down = nx.bipartite.biadjacency_matrix(G, row_order=nodelist_devs, column_order=nodelist_pkgs, weight=\"downstream\")\n",
-    "        am_down = adj_down.toarray()\n",
-    "        np.savetxt('../data/dyadic/dep_down_associations-{0}.txt'.format(observations[i]), am_down, fmt='%s')\n",
-    "        \n",
-    "\n",
-    "# create_developer_collaboration()"
+    "create_collaborations_with_owner()"
    ]
   }
  ],
