--- a/notebooks/data_transformation.ipynb
+++ b/notebooks/data_transformation.ipynb
@@ -1776,7 +1776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### License Type"
+    "#### Licenses"
    ]
   },
   {
@@ -1785,7 +1785,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "def create_licenses():\n",
+    "    licenses = sample_pkgs[['name', 'repo_name', 'repo_owner']].copy()\n",
+    "    licenses['name'] = \"pkg_\" + licenses['name']\n",
+    "\n",
+    "    with tqdm(total=len(observations)) as pbar:\n",
+    "        for index, row in tqdm(types.iterrows(), total=len(types.index)):\n",
+    "            if owned_by_organization(row['repo_name']):  \n",
+    "                types.loc[index, \"type\"] = 1\n",
+    "            else:\n",
+    "                owner_type = get_user_type(row['repo_owner'])\n",
+    "                if owner_type == \"Organization\":\n",
+    "                    types.loc[index, \"type\"] = 1\n",
+    "                elif owner_type == \"None\" or owner_type == \"User\":\n",
+    "                    types.loc[index, \"type\"] = 2\n",
+    "            pbar.update()\n",
+    "        pbar.close()\n",
+    "\n",
+    "    types['type'] = types['type'].astype(\"Int8\")\n",
+    "    types['type'] = types['type'].astype(str)\n",
+    "\n",
+    "    types.replace(to_replace='<NA>', value='NA', inplace=True)\n",
+    "    np.savetxt('../data/individual/pkg_repo_types.txt', types['type'].values, fmt='%s')\n",
+    "\n",
+    "create_repository_type()"
    ]
   },
   {
