--- a/notebooks/data_transformation.ipynb
+++ b/notebooks/data_transformation.ipynb
@@ -1656,17 +1656,13 @@
     "                    \n",
     "                stars.loc[index, obs] = int(watchers)\n",
     "\n",
-    "            # stars[f'log_{obs}'] = np.log10(stars[obs] + 1)\n",
     "            pbar.update()\n",
     "        pbar.close()\n",
     "\n",
-    "    # columns = [\"_\".join(['log', obs]) for obs in observations]\n",
-    "    # stars[columns] = stars[columns].astype(float)\n",
-    "    # stars[columns] = stars[columns].astype(str)\n",
     "    stars[observations] = stars[observations].astype(float)\n",
     "    stars[observations] = stars[observations].astype(str)\n",
     "    stars.replace(to_replace='<NA>', value='NA', inplace=True)\n",
-    "    # np.savetxt('../data/individual/pkg_community.txt', stars[columns].values, fmt='%s')\n",
+    "\n",
     "    np.savetxt('../data/individual/pkg_community.txt', stars[observations].values, fmt='%s')\n",
     "    \n",
     "create_community_interest()"
@@ -1750,19 +1746,16 @@
     "    types = sample_pkgs[['name', 'repo_name', 'repo_owner']].copy()\n",
     "    types['name'] = \"pkg_\" + types['name']\n",
     "\n",
-    "    with tqdm(total=len(observations)) as pbar:\n",
-    "        for index, row in tqdm(types.iterrows(), total=len(types.index)):\n",
-    "            if owned_by_organization(row['repo_name']):  \n",
+    "    for index, row in tqdm(types.iterrows(), total=len(types.index)):\n",
+    "        if owned_by_organization(row['repo_name']):  \n",
+    "            types.loc[index, \"type\"] = 1\n",
+    "        else:\n",
+    "            owner_type = get_user_type(row['repo_owner'])\n",
+    "            if owner_type == \"Organization\":\n",
     "                types.loc[index, \"type\"] = 1\n",
-    "            else:\n",
-    "                owner_type = get_user_type(row['repo_owner'])\n",
-    "                if owner_type == \"Organization\":\n",
-    "                    types.loc[index, \"type\"] = 1\n",
-    "                elif owner_type == \"None\" or owner_type == \"User\":\n",
-    "                    types.loc[index, \"type\"] = 2\n",
-    "            pbar.update()\n",
-    "        pbar.close()\n",
-    "\n",
+    "            elif owner_type == \"None\" or owner_type == \"User\":\n",
+    "                types.loc[index, \"type\"] = 2\n",
+    "    \n",
     "    types['type'] = types['type'].astype(\"Int8\")\n",
     "    types['type'] = types['type'].astype(str)\n",
     "\n",
@@ -1781,34 +1774,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_package_license(name):\n",
+    "    with driver.session(database=\"main\") as session:\n",
+    "        query = \"\"\"\n",
+    "            MATCH (p:Package)\n",
+    "            WHERE p.id = toString($name)\n",
+    "            RETURN toString(p.license)\n",
+    "            \"\"\"\n",
+    "        return session.run(query, name=name).single().value()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eb67768f19634bb398235f8acbf58746",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/250 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "def create_licenses():\n",
-    "    licenses = sample_pkgs[['name', 'repo_name', 'repo_owner']].copy()\n",
-    "    licenses['name'] = \"pkg_\" + licenses['name']\n",
+    "    licenses = sample_pkgs[['name']].copy()\n",
+    "    # licenses['name'] = \"pkg_\" + licenses['name']\n",
     "\n",
-    "    with tqdm(total=len(observations)) as pbar:\n",
-    "        for index, row in tqdm(types.iterrows(), total=len(types.index)):\n",
-    "            if owned_by_organization(row['repo_name']):  \n",
-    "                types.loc[index, \"type\"] = 1\n",
+    "    for index, row in tqdm(licenses.iterrows(), total=len(licenses.index)):\n",
+    "        pkg_license = get_package_license(row['name'])\n",
+    "        if pkg_license != \"None\":\n",
+    "            licenses.loc[index, \"license\"] = pkg_license\n",
+    "        else:\n",
+    "            latest_version = get_latest_version(driver, row['name'], observations[-1])\n",
+    "            if latest_version:\n",
+    "                licenses.loc[index, \"license\"] = latest_version[0]['license']\n",
     "            else:\n",
-    "                owner_type = get_user_type(row['repo_owner'])\n",
-    "                if owner_type == \"Organization\":\n",
-    "                    types.loc[index, \"type\"] = 1\n",
-    "                elif owner_type == \"None\" or owner_type == \"User\":\n",
-    "                    types.loc[index, \"type\"] = 2\n",
-    "            pbar.update()\n",
-    "        pbar.close()\n",
+    "                licenses.loc[index, \"license\"] = None\n",
     "\n",
-    "    types['type'] = types['type'].astype(\"Int8\")\n",
-    "    types['type'] = types['type'].astype(str)\n",
+    "    # Define license categories\n",
+    "    unrestrict = [\"Apache\", \"BSD\", \"CC-BY\", \"MIT\", \"ISC\", \"WTFPL\", \"zlib\",\n",
+    "                  \"Public\", \"CC0\", \"Unlicense\", \"Python\", \"W3C\"]\n",
+    "    restrict = [\"LGPL\", \"MPL\", \"EUPL\", \"Unicode\", \"ODC\", \"SGI\"]\n",
+    "    hrestrict = [\"GPL\", \"gpl\", \"Artistic\"]\n",
     "\n",
-    "    types.replace(to_replace='<NA>', value='NA', inplace=True)\n",
-    "    np.savetxt('../data/individual/pkg_repo_types.txt', types['type'].values, fmt='%s')\n",
+    "    licenses.loc[licenses['license'].isnull(), \"license_cat\"] = None\n",
+    "    licenses.loc[licenses['license'].str.contains('|'.join(unrestrict), na=False), \"license_cat\"] = 1\n",
+    "    licenses.loc[licenses['license'].str.contains('|'.join(restrict), na=False), \"license_cat\"] = 2\n",
+    "    licenses.loc[licenses['license'].str.contains('|'.join(hrestrict), na=False), \"license_cat\"] = 3\n",
     "\n",
-    "create_repository_type()"
+    "    licenses['license_cat'] = licenses['license_cat'].astype(\"Int8\")\n",
+    "    licenses['license_cat'] = licenses['license_cat'].astype(str)\n",
+    "    licenses['license_cat'].replace(to_replace='<NA>', value='NA', inplace=True)\n",
+    "\n",
+    "    np.savetxt('../data/individual/pkg_license.txt', licenses['license_cat'].values, fmt='%s')\n",
+    "\n",
+    "create_licenses()"
    ]
   },
   {
