--- a/R/analysis.Rmd
+++ b/R/analysis.Rmd
@@ -1,8 +1,10 @@
 ---
-title: "analysis"
+title: "RSiena Analysis"
 author: "Mario Mueller"
-date: "5/11/2022"
+date: "6/3/2022"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r setup, include=FALSE}
@@ -10,601 +12,230 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(tidygraph)
 library(igraph)
-library(Bergm)
 library(network)
 library(sna)
-library(igraph)
 library(intergraph)
-# Sys.setenv('R_MAX_VSIZE'=200000000000)
-setwd("/Users/mariomueller/Workspace/hicss-2023")
-```
-
-## Dependency Network
-
-```{r}
-nodes <- read_csv("./data/nodelists/packages.csv", col_names = TRUE) %>%
-    rename(label = id) %>%
-    rowid_to_column("id") %>%
-    select(id, label)
-
-edges <- read_csv("./data/edgelists/dependency_network-2021-04-01.edgelist", col_names = c("source", "destination")) %>%
-  left_join(nodes, by = c("source" = "label")) %>%
-  rename(from = id) %>%
-  left_join(nodes, by = c("destination" = "label")) %>%
-  rename(to = id) %>%
-  select(from, to)
-
-dnet1 <- network(edges, directed=TRUE, bipartite=FALSE, vertex.attr = nodes, matrix.type="edgelist")
-```
-
-```{r}
-dnet1 <- read_graph("data/networks/dependency_network-2021-04-01.gml", format = "gml") %>%
-  asNetwork()
-```
-
-
-```{r}
-fit1 <- bergm(dnet1 ~ edges + ikstar(1),
-              burn.in = 50,
-              aux.iters = 500,
-              main.iters = 1000,
-              gamma = 1.2)
-```
-
-
-
-## Affiliation
-
-```{r}
-nodes <- list.files(path="./data/nodelists/", full.names = TRUE) %>% 
-  lapply(read_csv) %>%
-  bind_rows() %>%
-  rename(label = id) %>%
-  rowid_to_column("id") %>%
-  select(id, label) %>%
-  mutate(is_actor = if_else(str_detect(label, "dev_"), 1, 0))
-```
-
-```{r}
-edges <- read_csv("./data/edgelists/affiliation_network-2021-04-01.edgelist", col_names = c("source", "destination")) %>%
-  left_join(nodes, by = c("source" = "label")) %>%
-  rename(from = id) %>%
-  left_join(nodes, by = c("destination" = "label")) %>%
-  rename(to = id) %>%
-  select(from, to)
-```
-
-```{r}
-net1 <- network(edges, directed=FALSE, bipartite=TRUE, bipartite_col="is_actor", vertex.attr = nodes, matrix.type="edgelist")
-```
-
-
-```{r}
-nodes %>%
-  filter(str_detect(label, 'dev_'))
-```
-
-```{r}
-aff1 <- read_graph("data/networks/affiliation_network-2021-04-01.gml", format = "gml") %>%
-  asNetwork()
-aff2 <- read_graph("data/networks/affiliation_network-2021-07-01.gml", format = "gml")
-aff3 <- read_graph("data/networks/affiliation_network-2021-10-01.gml", format = "gml")
-aff4 <- read_graph("data/networks/affiliation_network-2022-01-01.gml", format = "gml")
-```
-
-```{r}
-aff1
-```
-
-```{r}
-make_bipartite_graph(aff1)
-```
-
-
-```{r}
-fit1 <- bergm(net1 ~ edges,
-              burn.in = 50,
-              aux.iters = 500,
-              main.iters = 1000,
-              gamma = 1.2)
-```
-
-# Data
-
-```{r}
-# Read adjacency matrices for dependency networks
-dn1 <- as.matrix(read.table('data/adjacency/dnet2021-04-01.txt'))
-dn2 <- as.matrix(read.table('data/adjacency/dnet2021-07-01.txt'))
-dn3 <- as.matrix(read.table('data/adjacency/dnet2021-10-01.txt'))
-dn4 <- as.matrix(read.table('data/adjacency/dnet2022-01-01.txt'))
-```
-
-```{r}
-library(usethis) 
-usethis::edit_r_environ()
-```
-
-
-# SIENA 2023
-
-```{r}
 library(RSiena)
-library(sna)
+library(multiSiena)
+library(patchwork)
+library(texreg)
+# setwd("/Users/mariomueller/Workspace/hicss-2023")
 ```
 
+# Data Preparation
+
+## Node Sets & Composition Changes
+
 ```{r}
-# Nodelists
+# Load Node Lists
 devs <- read_csv("./data/nodelists/developers.csv", col_names = TRUE)
 pkgs <- read_csv("./data/nodelists/packages.csv", col_names = TRUE)
-```
 
-
-```{r}
-net1 <- as.matrix(read.table('data/adjacency/net-2021-04-01.txt'))
-net2 <- as.matrix(read.table('data/adjacency/net-2021-07-01.txt'))
-net3 <- as.matrix(read.table('data/adjacency/net-2021-10-01.txt'))
-net4 <- as.matrix(read.table('data/adjacency/net-2022-01-01.txt'))
-```
-
-```{r}
-aff1 <- as.matrix(read.table('data/adjacency/anet-2021-02-01.txt'))
-aff2 <- as.matrix(read.table('data/adjacency/anet-2021-03-01.txt'))
-aff3 <- as.matrix(read.table('data/adjacency/anet-2021-04-01.txt'))
-aff4 <- as.matrix(read.table('data/adjacency/anet-2021-05-01.txt'))
-aff5 <- as.matrix(read.table('data/adjacency/anet-2021-06-01.txt'))
-aff6 <- as.matrix(read.table('data/adjacency/anet-2021-07-01.txt'))
-aff7 <- as.matrix(read.table('data/adjacency/anet-2021-08-01.txt'))
-aff8 <- as.matrix(read.table('data/adjacency/anet-2021-09-01.txt'))
-aff9 <- as.matrix(read.table('data/adjacency/anet-2021-10-01.txt'))
-aff10 <- as.matrix(read.table('data/adjacency/anet-2021-11-01.txt'))
-aff11 <- as.matrix(read.table('data/adjacency/anet-2021-12-01.txt'))
-aff12 <- as.matrix(read.table('data/adjacency/anet-2022-01-01.txt'))
-```
-
-
-```{r}
 # Save numbers of developers and packages for network dimensions
 num_devs <- dim(devs)[1]
 num_pkgs <- dim(pkgs)[1]
+
+# Node Sets
+devs <- sienaNodeSet(num_devs, nodeSetName = "devs")
+pkgs <- sienaNodeSet(num_pkgs, nodeSetName = "pkgs")
+
+# Composition Changes for both Node Sets
+comp <- sienaCompositionChangeFromFile('data/compositions/comp_change.txt', nodeSet = "devs")
 ```
 
+## Network
+
 ```{r}
+# Load adjacency matrices
+net1 <- as.matrix(read.table('data/adjacency/net-2021-02-01.txt'))
+net2 <- as.matrix(read.table('data/adjacency/net-2021-03-01.txt'))
+net3 <- as.matrix(read.table('data/adjacency/net-2021-04-01.txt'))
+net4 <- as.matrix(read.table('data/adjacency/net-2021-05-01.txt'))
+
+# Create network object
 netList <- list(net1, net2, net3, net4)
 netArray <- array(c(net1, net2, net3, net4), dim=c(num_devs, num_pkgs, length(netList)))
 net <- sienaDependent(netArray, type="bipartite", nodeSet = c("devs", "pkgs"))
-```
 
-```{r}
-netList <- list(aff1, aff2, aff3, aff4, aff5, aff6, aff7, aff8, aff9, aff10, aff11, aff12)
-netArray <- array(c(aff1, aff2, aff3, aff4, aff5, aff6, aff7, aff8, aff9, aff10, aff11, aff12),
-                  dim=c(num_devs, num_pkgs, length(netList)))
-net <- sienaDependent(netArray, type="bipartite", nodeSet = c("devs", "pkgs"))
-```
-
-```{r}
+# Check network dimensions
 lapply(netList, dim)   # each network has the same number of actors as needed
 lapply(netList, function(x) table(x, useNA='always'))
 ```
 
-```{r}
-devs <- sienaNodeSet(num_devs, nodeSetName = "devs")
-pkgs <- sienaNodeSet(num_pkgs, nodeSetName = "pkgs")
-```
+### Plot Network
 
 ```{r}
-devs.comp <- sienaCompositionChangeFromFile('data/compositions/devs_comp.txt', nodeSet = "devs")
-pkgs.comp <- sienaCompositionChangeFromFile('data/compositions/pkgs_comp.txt', nodeSet = "pkgs")
-```
-
-```{r}
-deps_up <- as.matrix(read.table('data/individual/pkg_upstream.txt'))
-deps_down <- as.matrix(read.table('data/individual/pkg_downstream.txt'))
-```
-
-```{r}
-depsUpVar   <- varCovar(deps_up, nodeSet = "pkgs")
-depsDownVar <- varCovar(deps_down, nodeSet = "pkgs")
-```
-
-```{r}
-data <- sienaDataCreate(net, devs.comp, pkgs.comp, nodeSets = list(devs, pkgs))
-```
-
-
-```{r}
-data <- sienaDataCreate(net, depsUpVar, depsDownVar, nodeSets = list(devs, pkgs))
-```
-
-```{r}
-model <- sienaModelCreate()
-```
-
-```{r}
-print01Report(data, modelname='hicss-2023')
-```
-
-```{r}
-algorithm <- sienaAlgorithmCreate(projname='hicss-2023')
-effects <- getEffects(data)
-effectsDocumentation(effects)
-
-
-ans.model0 <- siena07(algorithm, data=data, effects=effects,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-```
-
-```{r}
-effects <- includeEffects(effects, inPop, name="net",
-                          test=F, fix=F, include=T)
-ans.model1 <- siena07(algorithm, data=data, effects=effects,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-```
-
-
-
-# HICSS 2022 Script
-
-```{r}
-# SIENA Analysis using R for the Paper Submission to the 
-#   Hawaii International Conference on System Sciences (HICSS) 2022.
-# Written by Mario Mueller <mario.mueller@wiso.uni-koeln.de>
-##############################################
-# Contents:
-#     (1) setup
-#     (2) load & inspect data
-#     (3) prepare objects for RSiena
-#     (4) model specification & estimation
-#     (5) goodness of fit
-#     (6) time heterogeneity
-#     (7) interpretation
-#     (8) simulations
-##############################################
-
-# =======================================
-# (1) setup
-# =======================================
-
-# Install the RSiena package
-install.packages("RSiena")
-
-# Load RSiena and sna
-library(RSiena)
-library(sna)
-
-# Check RSiena version. The initial analysis run with version 1.2.23
-packageVersion("RSiena")
-
-# Required function for output and GOF analysis
-# Functions are adapted from tutorial for the Social Networks and Health 
-#   workshop at Duke University on May 18, 2018 by David R. Schaefer
-outTable <- function(x) {
-  coef <- abs(x$theta)
-  coefPretty <- sprintf("%.3f", round(coef,3))
-  se <- diag(x$covtheta)**.5
-  sePretty <- sprintf("%.3f", round(se,3))
-  pval <- 2*pnorm(-abs(coef/se))
-  symp <- symnum(pval, corr = FALSE,
-                 cutpoints = c(0,  .001,.01,.05, .1, 1),
-                 symbols = c("***","**","*","."," "))
-  convPretty <- sprintf("%.3f", round(abs(x$tconv),3))
-  out1 <- noquote(cbind(
-    Function = x$effects[[1]], 
-    Effect = x$effects[[2]], 
-    Coef = coefPretty, 
-    StEr = sePretty, 
-    Sig = symp, 
-    Conv = convPretty))
-  out2 <- paste("Maximum Convergence Ratio:", round(x$tconv.max,3))
-  return(list(out1,out2))
-}
-
-# Functions required for GOF tests
-GeodesicDistribution <- function (i, data, sims, period, groupName,
-                                  varName, levls=c(1:5,Inf), cumulative=TRUE, ...) {
-  x <- networkExtraction(i, data, sims, period, groupName, varName)
-  require(sna)
-  a <- sna::geodist(symmetrize(x))$gdist
-  if (cumulative)
-  {
-    gdi <- sapply(levls, function(i){ sum(a<=i) })
-  }
-  else
-  {
-    gdi <- sapply(levls, function(i){ sum(a==i) })
-  }
-  names(gdi) <- as.character(levls)
-  gdi
-}
-
-# Holland and Leinhardt Triad Census; see ?sna::triad.census.
-TriadCensus <- function(i, data, sims, wave, groupName, varName, levls=1:16){
-  unloadNamespace("igraph") # to avoid package clashes
-  require(sna)
-  require(network)
-  x <- networkExtraction(i, data, sims, wave, groupName, varName)
-  if (network.edgecount(x) <= 0){x <- symmetrize(x)}
-  # because else triad.census(x) will lead to an error
-  tc <- sna::triad.census(x)[1,levls]
-  # names are transferred automatically
-  tc
-}
-
-
-# =======================================
-# (2) load & inspect data
-# =======================================
-
-# Set working directory
-setwd('/Users/mariomueller/Workspace/posse/rsiena/')
-
-# Load Data 
-# 
-# Adjacency Matrices of Dependency Network for each Observation
-net1 <- as.matrix(read.table('data/net1.txt'))  # 2016
-net2 <- as.matrix(read.table('data/net2.txt'))  # 2017
-net3 <- as.matrix(read.table('data/net3.txt'))  # 2018
-net4 <- as.matrix(read.table('data/net4.txt'))  # 2019
-
-netList <- list(net1, net2, net3, net4)
-netArray <- array(c(net1, net2, net3, net4), dim=c(dim(net1), length(netList)))
-
-# Adjacency Matrices for Dependency Types for each Observation
-# Note: The last observation is not considered for dyadic covariates
-types1 <- as.matrix(read.table('data/net1-type.txt'))  # 2016
-types2 <- as.matrix(read.table('data/net2-type.txt'))  # 2017
-types3 <- as.matrix(read.table('data/net3-type.txt'))  # 2018
-
-typesList <- list(types1, types2, types3)
-typesArray <- array(c(types1, types2, types3), dim=c(dim(types1),
-                    length(typesList)))
-
-# Behavior Variable: Updates
-updates <- as.matrix(read.table('data/updates-codes.txt'))
-
-# Actor Variables
-releases <- as.matrix(read.table('data/releases-codes.txt'))
-licenses <- as.matrix(read.table('data/licenses-codes.txt'))
-ages <- as.matrix(read.table('data/ages.txt'))
-
-# Inspect Data
-#
-lapply(netList, dim)   # each network has the same number of actors as needed
-lapply(netList, function(x) table(x, useNA='always'))
-
-lapply(typesList, dim)   # each network has the same number of actors as needed
-lapply(typesList, function(x) table(x, useNA='always'))
-
-# Plot Network Changes
 g.layout <- gplot(apply(netArray, c(1,2), max), usearrows=T)
-
-par(mfrow=c(1,4))
-for (i in 1:4) {
-  gplot(netArray[,,i], arrowhead.cex=.75, edge.col='gray70', coord=g.layout, 	
-        vertex.cex=1.5, main=paste('Dependency Network t',i,sep="") )
-}
-
-# =======================================
-# (3) prepare objects for RSiena
-# =======================================
-
-netDep <- sienaDependent(netArray, type="oneMode")
-updDep <- sienaDependent(updates, type="behavior")
-
-typDyad <- varDyadCovar(typesArray)
-
-licVar <- varCovar(licenses)
-relVar <- varCovar(releases)
-ageVar <- varCovar(ages)
-
-changes <- sienaCompositionChangeFromFile('data/composition-changes.txt')
-
-data <- sienaDataCreate(netDep, updDep, typDyad, licVar, relVar, ageVar, changes)
-
-print01Report(data, modelname='hicss-2022')
-
-# =======================================
-# (4) model specification & estimation
-# =======================================
-
-algorithm <- sienaAlgorithmCreate(projname='hicss-2022')
-
-effects <- getEffects(data)
-effectsDocumentation(effects)
-
-ans.model0 <- siena07(algorithm, data=data, effects=effects,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-
-#------------------------
-# Endogenous Effects
-#------------------------
-
-# Transitivity
-effects <- includeEffects(effects, transTrip, name="netDep",
-                          test=F, fix=F, include=T)
-# Test interaction between reciprocity and transitivity (Block 2015)
-effects <- includeEffects(effects, transRecTrip, name="netDep",
-                          test=T, fix=T, include=T)
-# Popularity
-effects <- includeEffects(effects, inPop, name="netDep",
-                          test=F, fix=F, include=T)
-effects <- includeEffects(effects, outPop, name="netDep",
-                          test=F, fix=F, include=T)
-# Activity
-effects <- includeEffects(effects, outAct, name="netDep",
-                          test=F, fix=F, include=T)
-# Assortativity
-effects <- includeEffects(effects, outInAss, name="netDep",
-                          test=F, fix=F, include=T)
-
-eff.model0 <- effects
-ans.model0 <- siena07(algorithm, data=data, effects=eff.model0,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-
-outTable(ans.model0)
-
-#------------------------
-# Exogenous Effects
-#------------------------
-# Dependency Type
-effects <- includeEffects(effects, WXX, name="netDep", interaction1="typDyad",
-                          test=F, fix=F, include=T)
-# License
-effects <- includeEffects(effects, sameX, egoX, altX,
-                          name="netDep", interaction1="licVar",
-                          test=F, fix=F, include=T)
-# Age
-effects <- includeEffects(effects, simX, egoX, altX,
-                          name="netDep", interaction1="ageVar",
-                          test=F, fix=F, include=T)
-
-eff.model1 <- effects
-ans.model1 <- siena07(algorithm, data=data, effects=eff.model1,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-
-outTable(ans.model1)
-
-#------------------------
-# Selection Effects
-#------------------------
-effects <- includeEffects(effects, altX, egoX, simX, name="netDep",
-                          interaction1="updDep", test=F, fix=F, include=T)
-eff.model2 <- effects
-ans.model2 <- siena07(algorithm, data=data, effects=eff.model2,
-                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                      nbrNodes=4)
-
-outTable(ans.model2)
-
-#------------------------
-# Influence Effects
-#------------------------
-effects <- includeEffects(effects, outdeg, name="updDep", interaction1="netDep",
-                          test=F, fix=F, include=T)
-effects <- includeEffects(effects, indeg, name="updDep", interaction1="netDep",
-                          test=F, fix=F, include=T)
-effects <- includeEffects(effects, avSim, name="updDep", interaction1="netDep",
-                          test=F, fix=F, include=T)
-
-eff.model3 <- effects
-ans.model3 <- siena07(algorithm, data=data, effects=eff.model3,
-               batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-               nbrNodes=4)
-
-outTable(ans.model3)
-
-# =======================================
-# (5) Goodness-of-Fit Tests
-# =======================================
-
-# GOF for current estimates with comp changes
-( gof.id <- sienaGOF(ans.model3, verbose=TRUE, varName="netDep",
-                     IndegreeDistribution, join=T, cumulative=F) )
-plot(gof.id)
-
-( gof.od <- sienaGOF(ans.model3, verbose=TRUE, varName="netDep",
-                     OutdegreeDistribution, join=T, cumulative=F) )
-plot(gof.od)
-
-( gof.gd <- sienaGOF(ans.model3, verbose=TRUE, varName="netDep",
-                     GeodesicDistribution, join=T, cumulative=F) )
-plot(gof.gd)
-
-( gof.tc <- sienaGOF(ans.model3, verbose=TRUE, varName="netDep",
-                     TriadCensus, join=T) )
-plot(gof.tc, scale=TRUE, center=TRUE)
-
-( gof.bd <- sienaGOF(ans.model3, verbose=TRUE, varName="updDep",
-                     BehaviorDistribution, join=T) )
-plot(gof.bd)
-
-# =======================================
-# (6) Time Heterogeneity
-# =======================================
-
-tt <- sienaTimeTest(ans)
-
-summary(tt)
-plot(tt)
-
-
-# Save Workspace
-save.image("hicss.RData")
-
-
-###############################################################################
-# Create new dataset without joiner and leavers,
-# as advised in Ripley et al. (2021)
-# Adjacency Matrices of Dependency Network for each Observation
-net1GOF <- as.matrix(read.table('data/net1-gof.txt'))  # 2016
-net2GOF <- as.matrix(read.table('data/net2-gof.txt'))  # 2017
-net3GOF <- as.matrix(read.table('data/net3-gof.txt'))  # 2018
-net4GOF <- as.matrix(read.table('data/net4-gof.txt'))  # 2019
-netListGOF <- list(net1GOF, net2GOF, net3GOF, net4GOF)
-netArrayGOF <- array(c(net1GOF, net2GOF, net3GOF, net4GOF),
-                     dim=c(dim(net1GOF), length(netListGOF)))
-
-types1GOF <- as.matrix(read.table('data/net1-type-gof.txt'))  # 2016
-types2GOF <- as.matrix(read.table('data/net2-type-gof.txt'))  # 2017
-types3GOF <- as.matrix(read.table('data/net3-type-gof.txt'))  # 2018
-typesListGOF <- list(types1GOF, types2GOF, types3GOF)
-typesArrayGOF <- array(c(types1GOF, types2GOF, types3GOF),
-                       dim=c(dim(types1GOF), length(typesListGOF)))
-
-netDepGOF <- sienaDependent(netArrayGOF, type="oneMode")
-typDyadGOF <- varDyadCovar(typesArrayGOF)
-
-dataGOF <- sienaDataCreate(netDepGOF, updDep, typDyadGOF, licVar, relVar, ageVar)
-
-print01Report(dataGOF, modelname='hicss-2022-gof')
-
-algorithmGOF <- sienaAlgorithmCreate(projname='hicss-2022-gof')
-
-effectsGOF <- getEffects(dataGOF)
-
-# Add effects of full model
-effectsGOF <- includeEffects(effectsGOF, transTrip, inPop, outPop, outAct, 
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, WXX, interaction1="typDyadGOF",
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, altX, interaction1="updDep",
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, sameX, interaction1="licVar",
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, altX, interaction1="ageVar",
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, simX, interaction1="ageVar",
-                             name="netDepGOF")
-effectsGOF <- includeEffects(effectsGOF, outdeg, interaction1="netDepGOF",
-                             name="updDep")
-
-ans.gof <- siena07(algorithmGOF, data=dataGOF, effects=effectsGOF,
-                   batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
-                   nbrNodes=4)
-
-( gof.id <- sienaGOF(ans.gof, verbose=TRUE, varName="netDepGOF",
-                     IndegreeDistribution, join=T, cumulative=F) )
-plot(gof.id)
-
-( gof.od <- sienaGOF(ans.gof, verbose=TRUE, varName="netDepGOF",
-                     OutdegreeDistribution, join=T, cumulative=F) )
-plot(gof.od)
-
-( gof.gd <- sienaGOF(ans.gof, verbose=TRUE, varName="netDepGOF",
-                     GeodesicDistribution, join=T, cumulative=F) )
-plot(gof.gd)
-
-( gof.tc <- sienaGOF(ans.gof, verbose=TRUE, varName="netDepGOF",
-                     TriadCensus, join=T) )
-plot(gof.tc, scale=TRUE, center=TRUE)
-
-( gof.bd <- sienaGOF(ans.gof, verbose=TRUE, varName="updDep",
-                     BehaviorDistribution, join=T) )
-plot(gof.bd)
-
+par(mfrow=c(1,1))
+gplot(netArray[,,4], gmode="twomode",
+      arrowhead.cex=.75, edge.col='gray70', coord=g.layout, vertex.cex=1.5)
 ```
 
+## Individual Variables
+
+### Packages
+
+```{r}
+# Dependencies
+deps_up        <- as.matrix(read.table('data/individual/pkg_upstream.txt'))
+deps_down      <- as.matrix(read.table('data/individual/pkg_downstream.txt'))
+deps_up_log    <- log(deps_up + 1)
+deps_down_log  <- log(deps_down + 1)
+depsUpLogVar   <- varCovar(deps_up_log, nodeSet = "pkgs", centered = T) 
+depsDownLogVar <- varCovar(deps_down_log, nodeSet = "pkgs", centered = T)
+  
+# Community Interest
+com_int      <- as.matrix(read.table('data/individual/pkg_community.txt'))
+com_int_log  <- log(com_int + 1)
+comIntLogVar <- varCovar(com_int_log, nodeSet = "pkgs", centered = T)
+
+# Release Activity
+releases     <- as.matrix(read.table('data/individual/pkg_releases.txt'))
+releases_log <- log(releases + 1)
+relActLogVar <- varCovar(releases_log, nodeSet = "pkgs", centered = T)
+
+# License
+license    <- as.matrix(read.table('data/individual/pkg_license.txt'))
+licenseVar <- coCovar(license[,1], nodeSet = "pkgs")
+
+# Age
+age       <- as.matrix(read.table('data/individual/pkg_age.txt'))
+age_log   <- log(age)
+ageLogVar <- varCovar(age_log, nodeSet = "pkgs", centered = T)
+```
+
+### Developers
+
+```{r}
+dev_act      <- as.matrix(read.table('data/individual/dev_activity.txt'))
+dev_act_log  <- log(dev_act + 1)
+devActLogVar <- varCovar(dev_act_log, nodeSet = "devs", centered = T)
+```
+
+## Dyadic Variables
+
+### Upstream Dependencies
+
+```{r}
+# Dependency Associations
+depUp1 <- as.matrix(read.table('data/dyadic/dep_up_associations-2021-02-01.txt'))
+depUp2 <- as.matrix(read.table('data/dyadic/dep_up_associations-2021-03-01.txt'))
+depUp3 <- as.matrix(read.table('data/dyadic/dep_up_associations-2021-04-01.txt'))
+# Last observation not required
+
+# Create network object
+depUpList  <- list(depUp1, depUp2, depUp3)
+depUpArray <- array(c(depUp1, depUp2, depUp3),
+                    dim=c(num_devs, num_pkgs, length(depUpList)))
+depUpDyad  <- varDyadCovar(depUpArray, nodeSets = c("devs", "pkgs"), type = "bipartite")
+```
+
+### Downstream Dependencies
+
+```{r}
+# Dependency Associations
+depDown1 <- as.matrix(read.table('data/dyadic/dep_down_associations-2021-02-01.txt'))
+depDown2 <- as.matrix(read.table('data/dyadic/dep_down_associations-2021-03-01.txt'))
+depDown3 <- as.matrix(read.table('data/dyadic/dep_down_associations-2021-04-01.txt'))
+
+# Create network object
+depDownList  <- list(depDown1, depDown2, depDown3)
+depDownArray <- array(c(depDown1, depDown2, depDown3),
+                    dim=c(num_devs, num_pkgs, length(depDownList)))
+depDownDyad  <- varDyadCovar(depDownArray, nodeSets = c("devs", "pkgs"), type = "bipartite")
+```
+
+## Initialization
+
+```{r}
+data <- sienaDataCreate(net, comp, devActLogVar,
+                        comIntLogVar, relActLogVar, ageLogVar, licenseVar,
+                        depsUpLogVar, depsDownLogVar, depUpDyad, depDownDyad,
+                        nodeSets = list(devs, pkgs))
+saveRDS(data, "data/sienaData.rds")
+data <- readRDS("data/sienaData.rds")
+print01Report(data, modelname='hicss-2023')
+
+algorithm <- sienaAlgorithmCreate(projname='hicss-2023',
+                                  seed=17,
+                                  n3=3000) # 1000 standard, 3000 for publication
+effects <- getEffects(data, nintn = 50)
+effectsDocumentation(effects)
+```
+
+# Model Estimations
+
+
+## Model 3
+
+```{r}
+# Rate Effect
+effects3 <- effects
+effects3 <- setEffect(effects3, RateX, name="net", type="rate", interaction1="devActLogVar",
+                      fix=F, test=F, include=T)
+
+# Endogenous Effects
+effects3 <- setEffect(effects3, cycle4, fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, inPop, fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, outAct, fix=F, test=F, include=T)
+
+# Exogenous Effects
+effects3 <- setEffect(effects3, egoX, name="net", interaction1="devActLogVar",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, altX, name="net", interaction1="comIntLogVar",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, altX, name="net", interaction1="relActLogVar",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, altX, name="net", interaction1="licenseVar",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, altX, name="net", interaction1="ageLogVar",
+                      fix=F, test=F, include=T)
+
+effects3 <- setEffect(effects3, altX, name="net", interaction1="depsUpLogVar",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, altX, name="net", interaction1="depsDownLogVar",
+                      fix=F, test=F, include=T)
+
+effects3 <- setEffect(effects3, X, name="net", interaction1="depUpDyad",
+                      fix=F, test=F, include=T)
+effects3 <- setEffect(effects3, X, name="net", interaction1="depDownDyad",
+                      fix=F, test=F, include=T)
+
+ans.model3 <- siena07(algorithm, data=data, effects=effects3,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      byWave=T, nbrNodes=12)
+summary(ans.model3)
+
+# Wald-type test
+wald.model3 <- Multipar.RSiena(ans.model3, c(4:ans.model3$pp))
+
+siena.table(ans.model3, sig=T, type="html", file="tables/model3.html")
+saveRDS(ans.model3, "models/model3.rds")
+```
+
+# Goodness-of-Fit
+
+```{r}
+gof.id.full <- sienaGOF(ans.full, varName="net", IndegreeDistribution,
+                        join=T, cumulative=F, verbose=T)
+plot(gof.id.full)
+
+gof.od.full <- sienaGOF(ans.full, varName="net", OutdegreeDistribution,
+                        join=T, cumulative=F, verbose=T)
+plot(gof.od.full)
+```
+
+# Results
+
+```{r}
+gof.string1 <- sprintf("%.2f (%d)", wald1$chisquare, wald1$df)
+gof.string2 <- sprintf("%.2f (%d)", wald2$chisquare, wald2$df)
+gof.string3 <- sprintf("%.2f (%d)", wald3$chisquare, wald3$df)
+
+texreg::htmlreg(list(model1, model2, model3),
+                stars = c(0.1, 0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(gof.string1, gof.string2, gof.string3)),
+                file = 'tables/results.html')
+```
