--- a/notebooks/analysis.Rmd
+++ b/notebooks/analysis.Rmd
@@ -1,7 +1,5 @@
 ---
-title: "RSiena Analysis"
-author: "Mario Mueller"
-date: "6/3/2022"
+title: "Data Analysis"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -21,7 +19,6 @@ library(ggplot2)
 library(cowplot)
 library(patchwork)
 library(texreg)
-# setwd("/Users/mariomueller/Workspace/hicss-2023")
 ```
 
 # Data Preparation
@@ -394,11 +391,11 @@ plot(gof.od2)
 ```{r}
 gof.id3 <- sienaGOF(ans.model3, varName="net", IndegreeDistribution,
                     join=T, cumulative=F, verbose=T)
-saveRDS(gof.id3, "models/model3.gof.id.rds")
+plot(gof.id3)
 
 gof.od3 <- sienaGOF(ans.model3, varName="net", OutdegreeDistribution,
                     join=T, cumulative=F, verbose=T)
-saveRDS(gof.od3, "models/model3.gof.od.rds")
+plot(gof.od3)
 ```
 
 ## Plot GOF
@@ -423,4 +420,3 @@ ggsave("figures/figure2.png",
        fig2,
        dpi = 600)
 ```
-
